--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body {
 }
 .details {
   border: 0.5px solid rgb(102, 101, 101);
+  color: white;
   border-radius: 20px;
   padding: 10px;
   margin: 10px;
